assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Gothic:wght@400;700;800&display=swap');

* {
  margin: 0;
  padding: 0;
 }

html {
    margin: 0;
    padding: 0;
    height: 100%;
}

body {
  font-family: "Nanum Gothic", sans-serif;
  color: #fff;
  background-color: #000000;
  height: 100%;
  position: relative;
  margin: 0;
  padding: 0;
}

.section-divider {
    border: 5px;
    border-top: 2px solid #800008;
    margin: 5px;
    padding: 5px;
}

/*------------------------------------------------Nav bar & Hero Img */

h2 {
  font-family: "Nanum Gothic", sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: #fff;
  font-size: 150%;
}

nav a:hover {
  border-bottom: 1px solid #800008;
}

.active {
  border-bottom: 1px solid #800008;
}

nav i {
    width: 50px;
    height: 50px;
    padding: 15px 0;
    font-size: 25px;
    line-height: 10px;
    text-align: center;
    color: #800008;
}

#hero-image {
  height: 800px;
  width: 100%;
  background: url(../images/babymetal-background5.jpeg) no-repeat center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
    
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;

  animation-name: hero-zoom;
  animation-duration: 8s;
  animation-fill-mode: forwards;
}

#hero-outer {
  height: 100%;
  width: 100%;
  overflow: hidden;
  position: relative;
}


@keyframes hero-zoom {
  from{
    transform: scale(1);
  }
  to{
    transform: scale(1.1);
  }
}

/*------------------------------------------------Band History */

#introduction {
    text-align: center;
}

.band-history {
    font-size: 18px;
}

.history {
    font-size: 18px;
    text-align: center;
    padding: 0;
}


/*------------------------------------------------Band members */

#band-members {
    font-size: 30px;
    font-weight: 400;
    text-align: center;
}

.member-heading {
    text-align: center;
    text-decoration: underline;
    font-size: 28px;
}

.rounded-circle {
    padding: 0 20px 10px;
    border-radius: 50%!important;
    text-align: center;
    float: left;
    border-style: solid;
    border-color: #000;
}

.band-members {
    box-sizing: border-box;
    border: 30px;
    background-color: #800008;
}

.band-members p {
    text-align: center;
    font-size: 18px;
}

.spotify-embeds {
  width: 100%;
  padding: 50px;  
}

iframe {
    display: block;
    transition: opacity 0.125s;
    width: 80%;
    margin:0 auto;
}

/*------------------------------------------------Footer */

.footer {
    color: #fff;
    text-align: center;
    background-color: #000;
    border-top: 2px solid #800008;
}

.footer a {
    text-decoration: none;
    color: #800008;
    background-color: transparent;
}

li:hover {
    color: #fff;
}

.links-merchandise {
  text-align: center;
}

.links-merchandise li {
  display: inline;
}

.links-merchandise i {
  font-size: 200%;
  margin: 1%;
  padding: 5%;
  color: #800008;
}

.links-merchandise i:hover {
    color: #fff;
}

/*------------------------------------------------Gallery page */

img {
    padding: 80px 0px 0px;
}



.iframe-container {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}

.iframe-container iframe, .iframe-container object, .iframe-container embed {
    position: absolute; 
    top: 0; 
    left: 0; 
    width: 100%; 
    height: 100%; 
}



/*------------------------------------------------Upcoming shows page */

.uppercase {
    text-transform: uppercase;
}

.section-column {
    display: table-cell;
    padding: 0 30px 30px;
    float: none;
}

.upcomingshows-heading,
.section-heading {
    font-family: "Nanum Gothic", sans-serif;
    font-weight: 500;
    margin-top: 25px;
    margin-bottom: 40px;
}

.upcomingshows-heading {
    color: #fff;
    margin-bottom: 10px;
}

.timeline-item {
    padding: 4em 2em 0em 2em;
    position: relative;
    color: #fff;
    border-left: 2px solid;
}

.timeline-item p {
    padding: 0;
    margin: 0;
}

.timeline-item:before {
    content: attr(data-dates);
    position: absolute;
    left: 2.5em;
    top: 3em;
    display: block;
    font-family: "Nanum Gothic", sans-serif;
    font-weight: 500;
    font-size: 0.8em;
    padding: 0;
    margin: 0;
}

.timeline-item:after {
    width: 12px;
    height: 12px;
    display: block;
    top: 2.4em;
    position: absolute;
    left: -6px;
    border-radius: 12px;
    content: '';
    background: #fafafa;
}

.calendar-items {
    margin-bottom: 30px;
}

.bg-image-upcoming-shows {
    clear: left;
    background: url(../images/babymetal-dark2.jpg);
    background-size: cover;
    background-position: center;
    height: 800px;
    z-index: -1;
    padding: 70px 10px;
}

.form-section {
    clear: left;
    background: url(../images/babymetal-dark1.jpg);
    background-size: cover;
    background-position: center;
    height: 800px;
    margin-top: 30px;
}

.signup-form{
  margin-top: 150px;
  color: #fff;
  background-color: rgba(0, 0, 0, 0.6);
  max-width: 400px;
  float: right;
  padding: 20px;
}

.signup-form h2{
  color: #fafafa;
  margin-bottom: 20px;
}

form i {
    position: relative;
    left: 10;
    color: #800008;
}

.text-input {
  background: transparent;
  color: #fafafa;
  width: 100%;
  height: 25px;
  margin: 5px 0px 20px 0px;
  border: 1px solid #fafafa;
  border-radius: 2px;
}

.text-input:hover {
  border-color: #800008;
  }
  
.join-button {
  margin-top: 20px;
  border-radius: 2px;
  padding: 15px 32px;
  text-align: center;
  font-size: 100%;
  background-color: #000;
  color: #fafafa;
  display: block;
}

.join-button:hover{
  background-color: #800008;
  color: #fff;
}

/*------------------------------------------------Media Screens */

@media screen and (max-width: 800px ){
  #hero-image {
     height: 80%;
     width: 100%;
     margin: 0;
     padding: 0;
     border: 0;
  }

    #hero-outer {
        height: 80%;
        width: 100%;
        overflow: hidden;
        position: relative;
        margin: 0;
        padding: 0;
        border: 0;
    }

    iframe {
    display: block;
    transition: opacity 0.125s;
    width: 100%;
    margin:0 auto;
}
}

